# modern-apis-with-fastapi-and-python

./: .gitignore  pyproject.toml
modern_apis_with_fastapi_and_python/: notes.org
modern_apis_with_fastapi_and_python/ch03-first-api/: main.py
modern_apis_with_fastapi_and_python/ch04-language-foundations/asgi/: notes.org
modern_apis_with_fastapi_and_python/ch04-language-foundations/async/: notes.org
modern_apis_with_fastapi_and_python/ch04-language-foundations/models/: notes.org  orders_v1.py  orders_v2.py
modern_apis_with_fastapi_and_python/ch04-language-foundations/types/: no_types_program.py  notes.org  types_program.py
modern_apis_with_fastapi_and_python/ch05-a-realistic-api/: main.py  notes.org  settings_templates.json
modern_apis_with_fastapi_and_python/ch05-a-realistic-api/api/: weather_api.py
modern_apis_with_fastapi_and_python/ch06-error-handling-and-perf/: main.py  notes.org
modern_apis_with_fastapi_and_python/ch06-error-handling-and-perf/api/: weather_api.py
modern_apis_with_fastapi_and_python/ch06-error-handling-and-perf/infrastructure/: weather_cache.py
modern_apis_with_fastapi_and_python/ch06-error-handling-and-perf/models/: location.py
modern_apis_with_fastapi_and_python/ch06-error-handling-and-perf/services/: openweather_service.py
modern_apis_with_fastapi_and_python/ch06-error-handling-and-perf/views/: home.py
modern_apis_with_fastapi_and_python/ch07_inbound_data/: main.py  settings.json
modern_apis_with_fastapi_and_python/ch07_inbound_data/api/: weather_api.py
tests/: test_modern_apis_with_fastapi_and_python.py
(+9 files in other folders)
